--- a/xv6-syscall/MIT6-S081-2020-labs-syscall/.gitignore
+++ b/xv6-syscall/MIT6-S081-2020-labs-syscall/.gitignore
@@ -11,13 +11,11 @@ entryother
 initcode
 initcode.out
 kernelmemfs
+mkfs
 kernel/kernel
 user/usys.S
 .gdbinit
-.vscode
-.idea
-myapi.key
-*-handin.tar.gz
+*.zip
 xv6.out*
 .vagrant/
 submissions/
